--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 </head>
 <body>
 
-<div class="color">
+<div class="color">   
+     
 <div class="container">
+    
     <section id="flo">
         <div class="row">
             <div>
@@ -40,7 +42,7 @@
     <section id="flo">
         <div class="row">
             <div>
-                <h1 class="text-cente">Investigação</h1>
+                <h1 class="te">Investigação</h1>
             </div>
             <div class="col-md-4">
                 <img  class="book" src="img/bibli.jpg" alt="">
